--- a/ArchSilver/releng/airootfs/etc/pacman.conf
+++ b/ArchSilver/releng/airootfs/etc/pacman.conf
@@ -97,3 +97,6 @@ Include = /etc/pacman.d/mirrorlist
 #[custom]
 #SigLevel = Optional TrustAll
 #Server = file:///home/custompkgs
+
+[chaotic-aur]
+Include = /etc/pacman.d/chaotic-mirrorlist
